force-app/unpackaged/objects/Salesforce_Feature__c.object
<CustomObject>
    <fields>
        <fullName>Brief_Description__c</fullName>
        <label>Brief Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Delivery_Date__c</fullName>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <formula>HYPERLINK(&quot;/lightning/r/Salesforce_Feature__c/&quot;&amp;CASESAFEID(Id)&amp;&quot;/view&quot;,  Brief_Description__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Description__c</fullName>
        <label>Full Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Date__c</fullName>
        <label>Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salesforce_Feature_ID_18_digit__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Feature ID (18-digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_Link__c</fullName>
        <label>Video Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WhyMinded_ID_18_digit__c</fullName>
        <label>WhyMinded ID (18-digit)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Salesforce Feature</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Brief_Description__c</columns>
        <columns>Video_Link__c</columns>
        <columns>Full_Description__c</columns>
        <columns>Expected_Delivery_Date__c</columns>
        <columns>Implementation_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SFTR-{YYYY}{MM}{DD}-{000000000}</displayFormat>
        <label>Salesforce Feature Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>